--- a/static/css/src/style.scss
+++ b/static/css/src/style.scss
@@ -8,37 +8,41 @@ body {
 	margin: 1em;
 }
 
+.charles {
+  border-radius: 50%;
+  cursor: pointer;
+  float: right;
+  height: 7.5em;
+  margin: 1em;
+  position:relative;
+  z-index: 1;
+}
+
 .scroll {
   background: url("/static/assets/light-veneer.png");
   line-height: 1.5;
   margin: 0 auto;
-  padding: 2em;
   max-width: 35em;
+  padding: 2em;
   //transform: rotate(-1.5deg);
   z-index: -1;
+
+  .number {
+    color: #c62828;
+    float: right;
+    font-family: 'Coming Soon', cursive;
+  }
+
+  .title {
+    text-align: center;
+    font-family: 'Homemade Apple', cursive;
+  }
+
+  .text {
+    font-family: 'Coming Soon', cursive;
+    font-size: 1.25em;
+  }
+
+
 }
 
-.scroll h2 {
-  text-align: center;
-  font-family: 'Homemade Apple', cursive;
-}
-
-.scroll p {
-  font-family: 'Coming Soon', cursive;
-  font-size: 1.25em;
-}
-
-.scroll span {
-  color: #c62828;
-  float: right;
-  font-family: 'Coming Soon', cursive;
-}
-
-img {
-  height: 7.5em;
-  border-radius: 50%;
-  margin: 1em;
-  float: right;
-  z-index: 1;
-  position:relative;
-}
